# MMA7361-Accelerometer

./: LICENSE  library.json  readme.md
docs/: wiring.fzz
examples/dynamic-calibration/: CMakeLists.txt  platformio.ini  readme.md
examples/dynamic-calibration/src/: display.cpp  display.h  main.cpp
examples/static-calibration/: CMakeLists.txt  platformio.ini  readme.md
examples/static-calibration/src/: display.cpp  display.h  main.cpp
src/: Mma7361Accelerometer.cpp  Mma7361Accelerometer.h  Mma7361Calibrator.cpp  Mma7361Calibrator.h
